<resources>
    <string name="app_name">AppTarefas</string>

    <string name="action_settings">Configurações</string>
    <string name="action_all_tasks">Todas as tarefas</string>
    <string name="action_next_seven_days">Próximos 7 dias</string>
    <string name="action_expired">Expiradas</string>
    <string name="action_logout">Sair</string>

    <string name="button_update_task">Atualizar tarefa</string>
    <string name="button_select_date">Clique para selecionar a data limite</string>
    <string name="button_add_task">Adicionar tarefa</string>
    <string name="cont_button_add_task">Botão de adicionar tarefa</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_register">Cadastrar</string>
    <string name="cont_button_register">Botão Cadastrar</string>
    <string name="button_new_register">Cadastre-se</string>
    <string name="cont_new_register">Botão Cadastre-se</string>
    <string name="button_login">Login</string>
    <string name="cont_button_login">Botão Login</string>
    <string name="button_yes">Sim</string>

    <string name="error_unexpected">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="error_internet_connection">Conexão à internet necessária para uso da aplicação.</string>

    <string name="msg_task_updated">Tarefa atualizada com sucesso!</string>
    <string name="msg_task_created">Tarefa criada com sucesso!</string>
    <string name="msg_task_removed">Tarefa removida com sucesso!</string>
    <string name="msg_dont_have_account">Não tem uma conta?</string>

    <string name="title_task_removal">Remoção de tarefa</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome</string>
    <string name="hint_description">Descrição</string>

    <string name="label_remove_task">Remover tarefa?</string>
    <string name="label_priority">Prioridade</string>
    <string name="label_complete">Completa</string>
    <string name="label_due_date">Data limite</string>

    <string name="toolbar_task_form">Cadastre sua tarefa</string>
    <string name="cont_back_task_form">Voltar</string>
    <string name="cont_image_logo_nav_header">Imagem do logo</string>
    <string name="cont_floating_bottom">Adicionar tarefa</string>
</resources>